--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dev_dependencies:
     sdk: flutter
   flutter_local_notifications: ^1.4.4
   webview_flutter: ^0.3.19+9
+  curved_navigation_bar : ^0.3.3
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
