add provider package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dev_dependencies:
   flutter_local_notifications: ^1.4.4
   webview_flutter: ^0.3.19+9
   curved_navigation_bar : ^0.3.3
+  provider: ^4.3.2
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
